(executable
 (public_name xbundle)
 (name xbundle)
  (modules xbundle)
 (libraries bos cmdliner yojson)
 (package xocaml))
 
(rule
 (alias bundle)
 (targets  external_libs.ml)
 (deps xbundle.exe libs.txt)
 (action
  (progn
   (run %{exe:xbundle.exe} %{dep:libs.txt}))))

(library
 (name external_libs)
 (public_name xocaml.external_libs)
 (modules external_libs))